--- a/kanban-board/package.json
+++ b/kanban-board/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.18.1",
     "bootstrap": "^5.1.3",
     "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.0",
